Limit D3D V-sync experiment to Win 8.1+

Previously D3D V-sync experiment included Win 8.0 but the initial
finch data suggests that it has issues on Win 8.0, for example GPU
crash rate is 8 times higher than in the control group.
I suspect there is the same internal D3D locking issue that I saw
on my Windows 7 workstation.

This patch changes the supported Windows version to start with Win 8.1.

BUG=726557
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2907753002
Cr-Commit-Position: refs/heads/master@{#475029}

Former-commit-id: 2fde6d35bd484cc0cb9a4b7964f0a5e2cf000a6a