gpu/ipc/service/image_transport_surface_win.cc
@@ -25,9 +25,9 @@ namespace gpu {
 
 namespace {
 bool IsGpuVSyncSignalSupported() {
-  // TODO(stanisc): http://crbug.com/467617 Limit to Windows 8+ for now because
-  // of locking issue caused by waiting for VSync on Win7.
-  return base::win::GetVersion() >= base::win::VERSION_WIN8 &&
+  // TODO(stanisc): http://crbug.com/467617 Limit to Windows 8.1+ for now
+  // because of locking issue caused by waiting for VSync on Win7 and Win 8.0.
+  return base::win::GetVersion() >= base::win::VERSION_WIN8_1 &&
          base::FeatureList::IsEnabled(features::kD3DVsync);
 }
 
